--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -39,15 +39,26 @@
 @media all and (max-width: 670px) {
     .header-right {
         display: none;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.9);
+    }
+
+    .header-right a {
+        float: none;
     }
 
     header .menu-icon {
         display: block;
     }
 
+    header .menu-icon:hover ~ .header-right{
+        display: block;
+    }
+
     .top-wrapper {
-        text-align: left;
         border-radius: 0;
+        height: 100vh;
     }
 
     .top-wrapper img {
@@ -55,8 +66,8 @@
     }
 
     .top-wrapper h1 {
-        font-size: 24px;
-        line-height: 36px;
+        font-size: 28px;
+        line-height: 50px;
     }
 
     .top-wrapper p {
@@ -88,10 +99,6 @@
         font-size: 16px;
     }
 
-    .footer {
-        text-align: center;
-    }
-
     .footer-item {
         width: 100%;
     }
@@ -115,14 +122,18 @@
 
     .footer-down {
         height: 100%;
+
+        text-align: center;
     }
 
     .down-right {
+        width: 100%;
         float: left;
     }
 
     .down-left {
-        padding: 20px 65px 0;
+        padding-bottom: 0;
+        width: 100%;
     }
 
     .down-left h2 {
@@ -130,6 +141,6 @@
     }
 
     .tombol-up {
-        display: none;
+      z-index: 5;
     }
 }
