--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ a {
     max-width: 1170px;
     padding: 0 15px;
     margin: 0 auto;
+    width: 100%;
 }
 
 /* ---------------------------------------top-wrapper */
@@ -108,11 +109,11 @@ footer .fa {
 /* ---------------------------------------header */
 header {
     height: 65px;
-    width: 100%;
     background-color: #80b82d;
     position: fixed;
     top: 0;
     z-index: 10;
+    width: 100%;
 }
 
 .logo {
@@ -142,6 +143,11 @@ header {
     background-color: rgba(255, 255, 255, 0.3);
 }
 
+.order-now {
+    background-color: rgba(0, 0, 0, 0.068);
+}
+
+header .menu-cross,
 header .menu-icon {
     color: white;
     float: right;
@@ -152,7 +158,7 @@ header .menu-icon {
 
 /* ---------------------------------------makanan-wrapper */
 
-.makanan-wrapper {
+.makanan-wrapper, .hitung-wrapper {
     padding-bottom: 80px;
     padding-left: 5%;
     padding-right: 5%;
@@ -186,7 +192,7 @@ header .menu-icon {
 
 .makanan-icon img {
     width: 80%;
-    height: 200px;
+    height: 220px;
     border-radius: 10%;
     box-shadow: 5px 5px 10px 1px #000;
 }
@@ -196,9 +202,11 @@ header .menu-icon {
     top: 44%;
     width: 100%;
     color: white;
+    font-weight: bolder;
+    font-size: 24px;
 }
 
-.txt-contents {
+.makanan-contents {
     width: 80%;
     display: inline-block;
     margin-top: 15px;
@@ -249,9 +257,10 @@ header .menu-icon {
     top: 80%;
     width: 100%;
     color: white;
+    font-size: 18px;
 }
 
-.txt-contents {
+.team-contents {
     width: 80%;
     display: inline-block;
     margin-top: 15px;
@@ -284,6 +293,54 @@ header .menu-icon {
     box-shadow: none;
 }
 
+/* --------------------------------------- hitung-wrapper */
+
+.hitungs {
+    background-color: #80b82d;
+    padding: 20px;
+}
+
+.kalkulator {
+    padding: 0px;
+}
+
+.kalkulator .tabel{
+    margin: 0 auto;
+    padding: 5px;
+    background-color: rgb(6, 88, 61);
+}
+
+.kalkulator input[type=text]{
+    width: 200px;
+    height: 40px;
+    background-color: #80b82d;
+    color: #fff;
+    font-size: 16px;
+    margin: 4px;
+    padding: 0 10px;
+    border: none;
+}
+
+
+.kalkulator input[type=button]{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: #80b82d;
+    color: #fff;
+    font-size: 16px;
+    margin: 4px;
+    border: none;
+    transition: transform 0.5s;
+}
+
+.kalkulator input[type=button]:hover{
+    transform: scale(1.1);
+}
+
+.kalkulator input[type=button]:active{
+    transform: scale(0.9);
+}
 /* --------------------------------------- footer */
 
 footer {
@@ -295,6 +352,8 @@ footer {
     height: 53vh;
     color: #000;
     line-height: 30px;
+    float: left;
+    width: 100%;
 }
 
 .footer-item {
@@ -322,7 +381,7 @@ footer {
     width: 80%;
     height: 50px;
 }
-.footer3 p{
+.footer3 p {
     font-size: 12px;
     color: rgb(124, 124, 124);
     margin: 0;
@@ -351,7 +410,8 @@ footer {
     margin-left: -1em;
 }
 
-.footer-item input[type=text], .footer-item input[type=email] {
+.footer-item input[type=email],
+.footer-item input[type=text] {
     width: 100%;
     height: 30px;
     padding: 0 10px;
@@ -376,7 +436,8 @@ footer {
     color: rgb(124, 124, 124);
 }
 
-.footer-item input[type=text]:focus, .footer-item input[type=email]:focus {
+.footer-item input[type=email]:focus,
+.footer-item input[type=text]:focus {
     box-shadow: #80b82d 1px 1px 1px 1px;
     outline: none;
 }
@@ -397,12 +458,15 @@ footer {
     height: 85px;
     background-color: #80b82d;
     color: #fff;
+    float: left;
+    width: 100%;
 }
 
 .down-left {
     float: left;
     padding: 15px 20px;
 }
+
 .down-right {
     float: right;
     line-height: 85px;
