--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 * {
     margin: 0;
     padding: 0;
@@ -516,7 +515,7 @@ footer {
     transform: scale(0.9);
     color: #436b07;
 }
-=======
+/* ======= */
 * {
     margin: 0;
     padding: 0;
@@ -986,4 +985,3 @@ footer {
     transform: scale(0.9);
     color: #436b07;
 }
->>>>>>> e6322021eac21c39bc583563e5bd18f9da1dc1c1
